# stm32f4-usbdevice

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md  UsbDescriptors.cpp  dump-usbdev.gdb  index.html  main.cpp  stm32f4-usbdevice.code-workspace  stm32f4-usbdevice.srctrlprj
common/doxygen/html/: _in_endpoint_via_s_t_m32_f4_8hpp_source.html  _out_endpoint_via_s_t_m32_f4_8hpp_source.html  _usb_application_8hpp_source.html  _usb_configuration_8hpp_source.html  _usb_control_pipe_8hpp_source.html  _usb_core_via_s_t_m32_f4_8hpp_source.html  _usb_device_8hpp_source.html  _usb_device_via_s_t_m32_f4_8hpp_source.html  _usb_hw_device_8hpp_source.html  _usb_in_endpoint_8hpp_source.html  _usb_interface_8hpp_source.html  _usb_out_endpoint_8hpp_source.html  _usb_types_8hpp_source.html  annotated.html  bug.html  classdevices_1_1_nvic_via_s_t_m32_f4_t.html  classes.html  classusb_1_1_usb_bulk_in_endpoint_t-members.html  classusb_1_1_usb_bulk_in_endpoint_t.html  classusb_1_1_usb_bulk_out_application-members.html  classusb_1_1_usb_bulk_out_application.html  classusb_1_1_usb_bulk_out_endpoint-members.html  classusb_1_1_usb_bulk_out_endpoint.html  classusb_1_1_usb_bulk_out_endpoint_t-members.html  classusb_1_1_usb_bulk_out_endpoint_t.html  classusb_1_1_usb_bulk_out_loopback_application_t-members.html  classusb_1_1_usb_bulk_out_loopback_application_t.html  classusb_1_1_usb_configuration-members.html  classusb_1_1_usb_configuration.html  classusb_1_1_usb_configuration_t-members.html  classusb_1_1_usb_configuration_t.html  classusb_1_1_usb_control_pipe-members.html  classusb_1_1_usb_control_pipe.html  classusb_1_1_usb_ctrl_in_endpoint_t-members.html  classusb_1_1_usb_ctrl_in_endpoint_t.html  classusb_1_1_usb_ctrl_out_endpoint-members.html  classusb_1_1_usb_ctrl_out_endpoint.html  classusb_1_1_usb_ctrl_out_endpoint_t-members.html  (+136 more)
(+59 files in other folders)
